--- a/src/pages/[...id].astro
+++ b/src/pages/[...id].astro
@@ -6,21 +6,17 @@ const response = await fetch(`https://pokeapi.deno.dev/pokemon/${id}`);
 const pokemon = (await response.json()) as PokemonDetail;
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pokemon.name} - View Transitions API Demo</title>
-  </head>
-  <body style={{ backgroundColor: pokemon.color }}>
-    <img src={pokemon.imageUrl} alt={pokemon.name} />
-  </body>
-</html>
+<main
+  class="full-size"
+  id={`${pokemon.id}`}
+  style={{ backgroundColor: pokemon.color }}
+>
+  <img class="full-size-image" src={pokemon.imageUrl} alt={pokemon.name} />
+</main>
 
 <style>
-  body {
+  main {
+    height: 100%;
     display: grid;
     place-items: center;
   }
