--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,38 @@
 ---
+import Layout from '../layouts/Layout.astro';
 import type { Pokemon } from '../types/Pokemon';
 
 const response = await fetch('https://pokeapi.deno.dev/pokemon?limit=25');
 const pokemon = (await response.json()) as Pokemon[];
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Pokedex - View Transitions API Demo</title>
-  </head>
-  <body>
-    <main>
-      {
-        pokemon.map((p) => (
-          <a href={`/${p.id}`} style={{ backgroundColor: p.color }}>
-            <img height="200px" width="200px" src={p.imageUrl} />
-          </a>
-        ))
-      }
-    </main>
-  </body>
-</html>
+<Layout>
+  <main>
+    {
+      pokemon.map((p) => (
+        <a
+          href={`/${p.id}`}
+          id={`${p.id}`}
+          style={{ backgroundColor: p.color }}
+          class="x-full-size"
+        >
+          <img
+            height="224px"
+            width="224px"
+            src={p.imageUrl}
+            class="x-full-size-image"
+          />
+        </a>
+      ))
+    }
+  </main>
+</Layout>
 
 <style>
-  body {
-    padding: 4em 2em;
-  }
   main {
+    padding: 4em 2em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, calc(200px + 3em));
+    grid-template-columns: repeat(auto-fit, calc(224px + 3em));
     gap: 2.5em;
     justify-content: center;
   }
@@ -40,5 +40,10 @@ const pokemon = (await response.json()) as Pokemon[];
   a {
     padding: 2.75em 1.5em;
     border-radius: 1rem;
+  }
+
+  .x-full-size,
+  .x-full-size-image {
+    contain: layout;
   }
 </style>
