--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,17 @@
+---
+import { ViewTransitions } from 'astro:transitions';
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>View Transitions API Demo</title>
-    <script>
-      import '../scripts/navigate';
-    </script>
+    <ViewTransitions />
   </head>
-  <body id="content">
+  <body>
     <slot />
   </body>
 </html>
